--- a/TrabajoPersonal_InmaculadaJuarez.Rmd
+++ b/TrabajoPersonal_InmaculadaJuarez.Rmd
@@ -219,9 +219,8 @@ vueloscancelados <-  vuelos %>%
   group_by(year, month, day) %>%
   summarise(vuelos_cancelado = sum(cancelado), numero_vuelos = n(),)
 
-ggplot(vueloscancelados) +
-  geom_line(aes(x = numero_vuelos, y = vuelos_cancelado, 
-                col = numero_vuelos,))
+ggplot(vueloscancelados, aes(numero_vuelos, vuelos_cancelado, col = numero_vuelos)) +
+  geom_line() + xlab("Numero de vuelos")+ ylab("Numero de vuelos cancelados")
 
   
 ```
@@ -243,8 +242,9 @@ proptardanz_cancel <-
 proptardanz_cancel
 
 
-ggplot(proptardanz_cancel) +
-  geom_line(aes(x = med_dep_delay, y = prop_cancelados, col=prop_cancelados))
+ggplot(proptardanz_cancel, aes( x = med_dep_delay, y = prop_cancelados, col=prop_cancelados)) +
+  geom_line()+ xlab ("Retraso promedio por dia")+ ylab("Numero de vuelos cancelados por dia")
+
 
 ```
 
@@ -264,11 +264,14 @@ Prop_retraso_cancel <-
   group_by(origin, dest) %>%
   summarise(prop_cancelados = mean(cancelados),med_dep_delay = mean(dep_delay, na.rm = TRUE),med_arr_delay = mean(arr_delay, na.rm = TRUE)) %>% ungroup()
 
-ggplot(Prop_retraso_cancel) +
-  geom_line(aes(x = med_dep_delay, y = prop_cancelados, col= prop_cancelados))
+
+
+ggplot(Prop_retraso_cancel, aes( x = med_dep_delay, y = prop_cancelados, col=prop_cancelados)) +
+  geom_line()+ xlab ("Retraso promedio por dia")+ ylab("Numero de vuelos cancelados por dia")
 
 ```
 
+No se observa relacion clara entre las dos variables en el caso del aeropuerto LGA. 
 
 ```{r}
 JFK <- filter(vuelos, origin=="JFK")
@@ -279,11 +282,12 @@ Prop_retraso_cancel <-
   group_by(origin, dest) %>%
   summarise(prop_cancelados = mean(cancelados),med_dep_delay = mean(dep_delay, na.rm = TRUE),med_arr_delay = mean(arr_delay, na.rm = TRUE)) %>% ungroup()
 
-ggplot(Prop_retraso_cancel) +
-  geom_line(aes(x = med_dep_delay, y = prop_cancelados, col= prop_cancelados))
+ggplot(Prop_retraso_cancel, aes( x = med_dep_delay, y = prop_cancelados, col=prop_cancelados)) +
+  geom_line()+ xlab ("Retraso promedio por dia")+ ylab("Numero de vuelos cancelados por dia")
 ```
 ```
 
+En este aeropuerto si observamos una relacion directs. Cuanto mayor es el tiempo medio de retraso de los vuelos al dia hay un  mayor numero de vuelos cancelados al dia. 
 
 
 
@@ -296,9 +300,14 @@ Prop_retraso_cancel <-
   group_by(origin, dest) %>%
   summarise(prop_cancelados = mean(cancelados),med_dep_delay = mean(dep_delay, na.rm = TRUE),med_arr_delay = mean(arr_delay, na.rm = TRUE)) %>% ungroup()
 
-ggplot(Prop_retraso_cancel) +
-  geom_line(aes(x = med_dep_delay, y = prop_cancelados, col= prop_cancelados))
-  
+ggplot(Prop_retraso_cancel, aes( x = med_dep_delay, y = prop_cancelados, col=prop_cancelados)) +
+  geom_line()+ xlab ("Retraso promedio por dia")+ ylab("Numero de vuelos cancelados por dia") 
+```
+
+No esxiste relacion entre estas dos variables. 
+
+```{r}
+
 ```
 
 
@@ -337,12 +346,11 @@ vuelos %>%
 ```
 
 
+La mejor hora para volar son las 5 am si queremos evitar retrasos en la salida. 
+
 ### 21. Queremos saber qué día de la semana nos conviene volar si queremos evitar los retrasos en la salida. 
 
 ```{r}
-
-
-library(lubridate)
 
 make_dtime <- function(year, month, day, time) {
   make_datetime(year, month, day, time %/% 100, time %% 100)
@@ -372,10 +380,13 @@ vuelos_dt %>%
    group_by(wday) %>% 
    summarize(ave_dep_delay = mean(dep_delay, na.rm = TRUE)) %>% 
    ggplot(aes(x = wday, y = ave_dep_delay)) + 
-   geom_bar(stat = "identity", col = "green")
+   geom_bar(stat = "identity", col = "blue")
 
 
 ```
+
+
+Para evitar retrasos en la salida debemos viajar el sabado. 
 
 
 ### 22. Para cada destino, calcula el total de minutos de retraso acumulado.
@@ -424,7 +435,7 @@ Los retrasos a lo largo del dia son mayores. Puede deberse a una acumulación de
 
 ### 25. URL
 
-
+https://github.com/Inmajg24/TrabajoPersonal_InmaJuarez.git
 
 ### 26. Session Info
 
